<resources>
    <string name="app_name">柬埔寨</string>
    <string name="log_in">登录</string>
    <string name="Email_quick_login">邮箱快速登录</string>
    <string name="Third_party_login">游客登录</string>
    <string name="Phone_number">手机号</string>
    <string name="Please_enter_your_mobile_phone_number">请输入您的手机号</string>
    <string name="password">密码</string>
    <string name="enter_your_PIN">请输入密码</string>
    <string name="There_is_no_account_to_register">没有账号 去注册</string>
    <string name="forget_the_password">忘记密码</string>
    <string name="verification_code">验证码</string>
    <string name="Please_enter_the_verification_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="Please_set_the_password">请设置密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="Please_enter_your_password_again">请再次输入密码</string>
    <string name="username">用户名</string>
    <string name="Please_fill_in_the_user_name">请填写用户名称</string>
    <string name="Invitation_code">邀请码</string>
    <string name="Please_fill_in_the_invitation_code_if_there_is_one">如有邀请码请填写</string>
    <string name="mailbox">邮箱</string>
    <string name="Please_enter_your_email_number_to_retrieve_your_password">请输入邮箱号  用于找回密码</string>
    <string name="register">注册</string>
    <string name="By_registering_you_agree">注册即代表你同意</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="retrieve_password">找回密码</string>
    <string name="Please_enter_your_email_number">请输入您的邮箱号</string>
    <string name="Please_enter_a_new_password">请输入新密码</string>
    <string name="Please_confirm_the_new_password_again">请再次确认新密码</string>
    <string name="submit">提交</string>
    <string name="keyword_search">搜索您想要的商品</string>
    <string name="all_classifications">全部分类</string>
    <string name="contact_us">联系我们</string>
    <string name="apply_for">申请VIP</string>
    <string name="Apply_for_wholesale">申请批发</string>
    <string name="Commodity_zone">商品专区</string>
    <string name="log_out">未登录</string>
    <string name="my_order">我的订单</string>
    <string name="all_orders">全部订单</string>
    <string name="obligation">待付款</string>
    <string name="To_send_the_goods">待发货</string>
    <string name="wait_for_receiving">待收货</string>
    <string name="remain_to_be_evaluated">待评价</string>
    <string name="A_refund_after">退款售后</string>
    <string name="My_service">我的服务</string>
    <string name="The_balance_of_my">我的余额</string>
    <string name="My_income">我的收益</string>
    <string name="my_favorite">我的收藏</string>
    <string name="My_evaluation">我的评价</string>
    <string name="My_invitation">我的邀请</string>
    <string name="shipping_address">收货地址</string>
    <string name="set">设置</string>
    <string name="change_password">更改登录密码</string>
    <string name="feedback">意见反馈</string>
    <string name="version_updating">版本更新</string>
    <string name="clear_cache">清除缓存</string>
    <string name="About_Us">关于我们</string>
    <string name="switch_the_language">切换语言</string>
    <string name="log_off">退出登录</string>
    <string name="head_portrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="identity">身份</string>
    <string name="region">地区</string>
    <string name="Add_the_address">添加地址</string>
    <string name="Edit_shipping_address">编辑收货地址</string>
    <string name="consignee">收货人：</string>
    <string name="Please_enter_name">请输入姓名</string>
    <string name="contact_number">联系电话：</string>
    <string name="Please_enter_a_contact_number">请输入联系电话</string>
    <string name="delivery_address">收货地址：</string>
    <string name="site">地址</string>
    <string name="detailed_address">详细地址:</string>
    <string name="Please_enter_the_detailed_address_such_as_the_number_of_the_house">请输入详细地址</string>
    <string name="Set_as_the_default_address">设为默认地址</string>
    <string name="confirm">确定</string>
    <string name="all">全部</string>
    <string name="my_purse">我的钱包</string>
    <string name="My_account_balance">我的账户余额</string>
    <string name="top_up">充值</string>
    <string name="balance_statement">余额明细</string>
    <string name="My_total_gain">我的总收益</string>
    <string name="Earnings_can_be_withdrawn">收益可进行提现</string>
    <string name="withdraw_deposit">提现</string>
    <string name="Returns_detailed">收益明细</string>
    <string name="Invite_poster">邀请海报</string>
    <string name="Invited_to_record">邀请记录</string>
    <string name="Save_the_posters">保存海报</string>
    <string name="Share_the_posters">分享海报</string>
    <string name="copy">复制</string>
    <string name="invite">邀请</string>
    <string name="direct_user">直接用户</string>
    <string name="indirect_user">间接用户</string>
    <string name="check_all">全选</string>
    <string name="To_settle_accounts">去结算</string>
    <string name="total">合计：</string>
    <string name="no_data">暂无数据</string>
    <string name="shopping_trolley">购物车</string>
    <string name="delete">删除</string>
    <string name="home_page">首页</string>
    <string name="classify">分类</string>
    <string name="my">我的</string>
    <string name="line_item">订单详情</string>
    <string name="consignee_information">收件人信息</string>
    <string name="freight">邮费</string>
    <string name="Amount_of_goods">合计</string>
    <string name="payment_method">支付方式</string>
    <string name="Buyer_message">备注</string>
    <string name="order_information">订单信息</string>
    <string name="order_reference">订单编号：</string>
    <string name="creation_time">创建时间：</string>
    <string name="Password_verification_failed">密码验证不通过</string>
    <string name="The_verification_code_is_incorrect">验证码不正确</string>
    <string name="The_phone_number_already_exists">手机号码已存在</string>
    <string name="regain">重新获取</string>
    <string name="New_password_authentication_failed">新密码验证失败</string>
    <string name="User_registration_agreement">用户注册协议</string>
    <string name="Member_prepaid_phone">会员充值</string>
    <string name="Distribution_rights">分销权益</string>
    <string name="Wholesaler_interest">批发商权益</string>
    <string name="gold_medal">金牌VIP</string>
    <string name="Special_zone">特价区</string>
    <string name="Boutique_zone">精品区</string>
    <string name="Discount_zone">折扣区</string>
    <string name="name">姓名:</string>
    <string name="shoujihao">手机号:</string>
    <string name="wx">微信:</string>
    <string name="xingming">请输入您的姓名</string>
    <string name="weixin">请输入您的微信号</string>
    <string name="shuru_area">请输入所属区域</string>
    <string name="area">所属区域:</string>
    <string name="registered">已报名</string>
    <string name="apply">报名</string>
    <string name="online_activities">线下活动</string>
    <string name="Please_enter_the_correct_contact_number">请输入正确的联系电话</string>
    <string name="Please_select_the_address">请选择地址</string>
    <string name="Show_the_result">提现结果</string>
    <string name="Show_the_ok">提现申请成功，等待管理员处理</string>
    <string name="bank_card">银行卡</string>
    <string name="alipay">支付宝</string>
    <string name="cash_withdrawal_amount">提现金额</string>
    <string name="Withdrawal_way">提现方式</string>
    <string name="accomplish">完成</string>
    <string name="evaluation">评价</string>
    <string name="This_user_has_no_comment">此用户没有评价</string>
    <string name="binding">绑定手机号</string>
    <string name="I_have_read_and_agree">我已阅读并同意</string>
    <string name="Modify_the_nickname">修改昵称</string>
    <string name="nicheng">昵称:</string>
    <string name="cancel">取消</string>
    <string name="Please_enter_the_old_password">请输入旧密码</string>
    <string name="same_as_the_new_one">旧密码与新密码不能相同</string>
    <string name="yanzheng">为了保障您的账号安全，修改密码需验证手机号</string>
    <string name="login_password">请输入登录密码</string>
    <string name="new_password">请输入新手机号</string>
    <string name="new_phone">新手机号</string>
    <string name="Modify_phone_number">修改手机号</string>
    <string name="loginpassword">登录密码</string>
    <string name="synthesize">综合</string>
    <string name="sales_volume">销量</string>
    <string name="price">价格</string>
    <string name="Please_login_first">请先登录</string>
    <string name="piece">件</string>
    <string name="yishou">已售</string>
    <string name="shoucang">收藏</string>
    <string name="guige">规格</string>
    <string name="shangpinxiangqing">商品详情</string>
    <string name="yonghupinglun">用户评论</string>
    <string name="gengduo">更多</string>
    <string name="kefu">客服</string>
    <string name="jiarugouwuche">加入购物车</string>
    <string name="lijigoumai">立即购买</string>
    <string name="tuikuaixiangqing">退款详情</string>
    <string name="tuikuanshenqing">退款申请</string>
    <string name="shenhezhong">审核中</string>
    <string name="tuikuanchenggong">退款成功</string>
    <string name="tuikuanxinxi">退款信息</string>
    <string name="dingdanbianhao">订单编号：</string>
    <string name="tuikuanjine">退款金额：</string>
    <string name="tuikuanyuanyin">退款原因：</string>
    <string name="tuikuanshuoming">退款说明：</string>
    <string name="shenqingshijian">申请时间：</string>
    <string name="tuikuanshijian">退款时间：</string>
    <string name="haoping">好评</string>
    <string name="chaping">差评</string>
    <string name="chanjianwenti">常见问题</string>
    <string name="kuaidixinxi">快递信息</string>
    <string name="xiaoxi">消息</string>
    <string name="quedingquxiao">确认取消</string>
    <string name="dingdanquxiao">订单一经取消，无法再次找回</string>
    <string name="zaixiangxiang">再想想</string>
    <string name="querenshouhuo">确认收货？</string>
    <string name="quere">确认</string>
    <string name="qufukuan">去付款</string>
    <string name="qupingjia">去评价</string>
    <string name="chakantuikuanxiangqing">查看退款详情</string>
    <string name="quedingshouhuo">确认收货</string>
    <string name="quxiaodingdan">取消订单</string>
    <string name="shenqingtuikuan">申请退款</string>
    <string name="chakanwuliu">查看物流</string>
    <string name="dengdaimaijiafukuan">等待买家付款</string>
    <string name="gongji">共计</string>
    <string name="jianshangpin">件商品</string>
    <string name="maijiayifukuandengdaifahuo">买家已付款，正在等待发货</string>
    <string name="dingdanyifahuo">您的订单已发货，请您耐心等待</string>
    <string name="jiaoyiyiwanchng">交易已完成，感谢您的支持</string>
    <string name="yiquxiao">已取消</string>
    <string name="zhengzaituikuanzhong">正在退款中......</string>
    <string name="yituikuan">已退款</string>
    <string name="tuikuanyijujue">退款已拒绝</string>
    <string name="baoyou">包邮</string>
    <string name="qingliuyan">如有需要请留言</string>
    <string name="querendingdan">确认订单</string>
    <string name="qingxuanzeshouhuodizhi">请选择收货地址</string>
    <string name="shagnpinjiee">商品金额</string>
    <string name="liuyan">留言:</string>
    <string name="tijiaodingdan">提交订单</string>
    <string name="gerenziliao">个人资料</string>
    <string name="putongyonghu">普通用户</string>
    <string name="yinpai">银牌VIP</string>
    <string name="jinpai">金牌VIP</string>
    <string name="jingxioashang">经销商</string>
    <string name="wangluocuowu">网络错误,请稍后重试</string>
    <string name="tishi">提示</string>
    <string name="kaiqishoujiduxie">请先开启读写手机存储权限!</string>
    <string name="fukuan">付款</string>
    <string name="zhifu">支付</string>
    <string name="qingshuruchongzhijine">请输入充值金额</string>
    <string name="shezhijiaoyimima">请设置交易密码</string>
    <string name="shurujiaoyimima">请输入交易密码</string>
    <string name="chongzhichenggong">充值成功</string>
    <string name="shuruchongzhijine">输入充值金额</string>
    <string name="weixinzhifu">微信支付</string>
    <string name="zhifubaozhifu">支付宝支付</string>
    <string name="paypal">PayPal支付</string>
    <string name="yuezhifu">余额支付</string>
    <string name="xianxiazhifu">线下支付</string>
    <string name="tuikuan">退款/售后</string>
    <string name="qingxuanzeshangpin">请选择商品</string>
    <string name="qingxuanzetuikuanyuanyin">请选择退款原因</string>
    <string name="qingxuanzetuikuanshangpin">请选择退款商品</string>
    <string name="tuikuanyuanyin1">退款原因</string>
    <string name="qingxuanze">请选择</string>
    <string name="tuikuanjine1">退款金额</string>
</resources>