<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="45dp"
    android:background="@color/white"
    tools:context="com.lxkj.jpz.Activity.ChangephoneActivity">
    <TextView
        android:text="@string/Modify_phone_number"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/grey3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/loginpassword"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="34dp"
        android:textColor="@color/grey3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/et_password"
        android:hint="@string/login_password"
        android:textColorHint="#999999"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_marginTop="9dp"
        android:background="#E5E5E5"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:text="@string/new_phone"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="28dp"
        android:textColor="@color/grey3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_phone"
        android:layout_marginTop="15dp"
        android:hint="@string/new_password"
        android:textColorHint="#999999"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_marginTop="9dp"
        android:background="#E5E5E5"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:text="@string/verification_code"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="28dp"
        android:textColor="@color/grey3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_code"
            android:hint="@string/Please_enter_the_verification_code"
            android:textColorHint="#999999"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/faCode"
            android:gravity="center"
            android:text="@string/get_code"
            android:textSize="12sp"
            android:textColor="@color/grey_666"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_marginTop="9dp"
        android:background="#E5E5E5"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="287dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="62dp"
        android:background="@drawable/biankuang3"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>
