<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_sell"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66000000"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_sell_item"
        android:layout_width="match_parent"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="36dp"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/biankuang4"
        android:orientation="vertical">
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/name"
                android:textSize="16sp"
                android:textColor="@color/grey_666"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_name"
                android:hint="@string/xingming"
                android:paddingLeft="5dp"
                android:textColor="@color/grey3"
                android:textSize="13sp"
                android:layout_marginLeft="40dp"
                android:background="@drawable/biankuang21"
                android:layout_width="match_parent"
                android:layout_height="25dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/shoujihao"
                android:textSize="16sp"
                android:textColor="@color/grey_666"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_phone"
                android:hint="@string/Please_enter_your_mobile_phone_number"
                android:paddingLeft="5dp"
                android:textColor="@color/grey3"
                android:textSize="13sp"
                android:layout_marginLeft="25dp"
                android:background="@drawable/biankuang21"
                android:layout_width="match_parent"
                android:layout_height="25dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/wx"
                android:textSize="16sp"
                android:textColor="@color/grey_666"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_wx"
                android:hint="@string/weixin"
                android:paddingLeft="5dp"
                android:textColor="@color/grey3"
                android:textSize="13sp"
                android:layout_marginLeft="40dp"
                android:background="@drawable/biankuang21"
                android:layout_width="match_parent"
                android:layout_height="25dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/area"
                android:textSize="16sp"
                android:textColor="@color/grey_666"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_quyu"
                android:hint="@string/shuru_area"
                android:paddingLeft="5dp"
                android:textColor="@color/grey3"
                android:textSize="13sp"
                android:layout_marginLeft="9.5dp"
                android:background="@drawable/biankuang21"
                android:layout_width="match_parent"
                android:layout_height="25dp" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_confirm"
            android:text="@string/confirm"
            android:gravity="center"
            android:background="@drawable/biankuang21"
            android:textColor="@color/grey3"
            android:textSize="17sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="85.5dp"
            android:layout_height="28.5dp" />

    </LinearLayout>


</RelativeLayout>
