<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.lxkj.jpz.Activity.ChangepasswordActivity">
    <TextView
        android:gravity="center"
        android:textSize="13sp"
        android:textColor="#242424"
        android:text="@string/yanzheng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_phone"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#242424"
        android:text="157****1235"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edit2"
            android:paddingLeft="@dimen/dp_5"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/biankuang"
            android:gravity="center_vertical"
            android:hint="@string/Please_enter_the_verification_code"
            android:inputType="number"
            android:maxLength="6"
            android:textColorHint="#999999"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="#E6E6E6" />

        <TextView
            android:id="@+id/faCode"
            android:gravity="center"
            android:background="@drawable/biankuang15"
            android:layout_width="79dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="14dp"
            android:text="@string/get_code"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16.5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_oldpassword"
            android:hint="@string/Please_enter_the_old_password"
            android:paddingLeft="@dimen/dp_5"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textColorHint="#999999"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:background="@drawable/biankuang"
            android:layout_height="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16.5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_newPassword"
            android:hint="@string/Please_enter_a_new_password"
            android:textSize="14sp"
            android:paddingLeft="@dimen/dp_5"
            android:textColor="@color/black"
            android:textColorHint="#999999"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:background="@drawable/biankuang"
            android:layout_height="30dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="287dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="44dp"
        android:background="@drawable/biankuang3"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>
